--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,21 @@
-.App {
+.home_link {
+  display: block;
+  color: white;
+  background-image: linear-gradient(to right, black, grey);
+  text-decoration: none;
+  width: 100%;
+  min-width: 100%;
+  justify-content: center;
+  text-align: center;
+  font-size: 20px;
+  font-style: italic;
+  font-weight: bold;
+  padding: 5px;
+
+}
+
+
+/* .App {
   text-align: center;
 }
 
@@ -26,7 +43,7 @@
 
 .App-link {
   color: #61dafb;
-}
+} */
 
 /* @keyframes App-logo-spin {
   from {
