--- a/src/Homepage.css
+++ b/src/Homepage.css
@@ -5,17 +5,12 @@
   flex-direction: column;
 }
 
-.center_container {
-  display: flex;
-  flex-direction: row;
-}
-
-.center_section {
-  width: 50%
-}
-
-.side_section {
-  width: 25%;
+.app_header {
+  color: white;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
 }
 
 .button {
@@ -34,40 +29,70 @@
   outline: none;
 }
 
+.middle_container {
+  display: flex;
+  flex-direction: row;
+}
+
+.center_section {
+  width: 50%
+}
+
+.home_img {
+  height: 600px;
+  pointer-events: none;
+}
+
+.side_section {
+  width: 25%;
+}
+
 .side_button {
   width: 80%;
-  padding: 10px 0;
   margin: 20px 10%;
 }
 
 #potions {
-  background-color: purple;
+  background-color: rgb(200, 61, 200);
 }
 
-.home_img {
-  height: 100vmin;
-  pointer-events: none;
+#search_list {
+  background-color: aqua;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+#my_gear {
+  background-color: rgb(97, 208, 85);
+}
+
+@media only screen and (max-width: 768px) {
+
+  .homepage {
+    text-align: center;
+    background-image: radial-gradient(lightgrey, black);
+    display: flex;
+    flex-direction: column;
+  }
+
+  .app_header {
+    color: white;
+    font-size: calc(10px + 2vmin);
+  }
+
+  .button {
+    width: 75%;
+    margin: 20px;
+    display: inline-block;
+    padding: 10px 0;
+    color: black;
+    background-color: azure;
+    font-size: 20px;
+    font-weight: bold;
+    text-decoration: none;
+    border-radius: 10px;
+    outline: none;
+  }
+
+  .home_img {
+    display: none;
   }
 }
-
-.app_header {
-  color: white;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-}
-
-/* @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
