--- a/src/Potionomics.css
+++ b/src/Potionomics.css
@@ -4,61 +4,44 @@
   width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'American Typewriter', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   font-size: 16px;
   color: black;
-  height: 100%;
   background-image: linear-gradient(to bottom right, rgb(192, 8, 192), rgb(234, 208, 74));
-  font-size: 16px;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  cursor: default;
 }
 
 .page_content {
-  /* margin: 1rem 10rem; */
   justify-content: center;
 }
 
 .page_header {
   font-family: 'Chalkduster', fantasy;
-  padding-top: 30px;
-  width: 100%;
-  height: 350px;
+  margin: auto;
+  padding: 6vw;
+  height: 4em;
   display: flex;
   align-items: center;
-  flex-direction: row;
-}
-
-.potion_img_container {
-  width: 300px;
-  height: 350px;
 }
 
 #potion_img_content {
-  height: 100%;
-  padding: 2rem 0 0 8rem;
+  display: none;
 }
 
 .page_header_text {
-  margin: 0;
-  height: 100%;
+  margin: 0 auto;
   text-align: center;
-  letter-spacing: .8rem;
-  font-size: 120px;
-  padding: 0 0 120px 30px;
+  font-size: calc(5vw + 1em);
 }
 
 .page_break {
   color: white;
-  margin: 30px 0 60px 0;
 }
 
 .table_title {
-  font-size: 2rem;
+  font-size: calc(1vw + 1em);
   padding-bottom: 10px;
-  font-weight: 700;
+  font-weight: 600;
 }
 
 .table_container {
@@ -67,52 +50,53 @@
 }
 
 table {
+  margin: auto 3vw;
   padding: 0 20px 10px;
   border: 2px solid white;
+  max-width: 100%;
+  border-collapse: collapse;
 }
 
 .table_header_long {
-  width: 250px;
-  margin: 0 30px;
-  font-size: 1.3rem;
+  width: 10%;
+  font-size: calc(1vw + 1em);
+  margin: 0 1vw;
   border-bottom: 2px solid white;
 }
 
 .table_header_attribute {
-  width: 100px;
-  font-size: 1.3rem;
-  padding: 0 10px;
+  width: 10vw;
+  font-size: calc(1vw + 1em);
   border-bottom: 2px solid white;
 }
 
 .table_header_price {
-  width: 150px;
-  font-size: 1.3rem;
-  padding: 0 10px;
+  width: 10vw;
+  padding: 0 1vw;
   border-bottom: 2px solid white;
 }
 
 .table_content {
-  padding: 10px 20px;
   text-align: center;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.847);
+  padding: 3px auto;
+  font-size: calc(1vw + .5em);
+  border: 1px solid rgba(255, 255, 255, 0.847);
+}
+
+td {
+  padding: 1vw 0;
 }
 
 #table_content_name {
-  font-weight: 700;
+  font-weight: 500;
 }
 
-thead button {
+th button {
   border: 0;
+  margin: auto;
   background-color: transparent;
-  border-radius: none;
-  font-family: inherit;
-  font-weight: 700;
-  width: 100%;
-  /* text-align: left; */
-  font-size: inherit;
-  padding: 0.5em 20px;
-  /* margin: 0 30px; */
+  font-weight: 500;
+  font-size: calc(1vw + .6em);
   cursor: pointer;
 }
 
@@ -134,4 +118,140 @@ tbody tr:hover {
   background-color: rgb(255, 255, 255, 0.5 );
 
 }
+
+@media only screen and (min-width: 768px) {
   
+  .page_content {
+    margin: 0;
+    padding: 0 0 1.5rem;
+    width: 100%;
+    font-family: -apple-system, BlinkMacSystemFont, 'American Typewriter', 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-size: 16px;
+    color: black;
+    /* height: 100%; */
+    background-image: linear-gradient(to bottom right, rgb(192, 8, 192), rgb(234, 208, 74));
+    font-size: 16px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    cursor: default;
+  }
+  
+  .page_content {
+    justify-content: center;
+  }
+  
+  .page_header {
+    font-family: 'Chalkduster', fantasy;
+    margin: auto;
+    padding-top: 30px;
+    width: 80%;
+    height: 350px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+  }
+  
+  .potion_img_container {
+    width: 300px;
+    height: 350px;
+  }
+  
+  #potion_img_content {
+    height: 350px;
+  }
+  
+  .page_header_text {
+    margin: 0 auto;
+    text-align: center;
+    letter-spacing: .8rem;
+    font-size: 120px;
+  }
+  
+  .page_break {
+    color: white;
+    margin: 30px 0 60px 0;
+  }
+  
+  .table_title {
+    font-size: 2rem;
+    padding-bottom: 10px;
+    font-weight: 700;
+  }
+  
+  .table_container {
+    display: flex;
+    justify-content: center;
+  }
+  
+  table {
+    padding: 0 20px 10px;
+    border: 2px solid white;
+  }
+  
+  .table_header_long {
+    width: 250px;
+    margin: 0 30px;
+    font-size: 1.3rem;
+    border-bottom: 2px solid white;
+  }
+  
+  .table_header_attribute {
+    width: 100px;
+    font-size: 1.3rem;
+    padding: 0 10px;
+    border-bottom: 2px solid white;
+  }
+  
+  .table_header_price {
+    width: 150px;
+    font-size: 1.3rem;
+    padding: 0 10px;
+    border-bottom: 2px solid white;
+  }
+  
+  .table_content {
+    padding: 10px 20px;
+    text-align: center;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.847);
+  }
+  
+  #table_content_name {
+    font-weight: 700;
+  }
+  
+  thead button {
+    border: 0;
+    background-color: transparent;
+    border-radius: none;
+    font-family: inherit;
+    font-weight: 700;
+    width: 100%;
+    /* text-align: left; */
+    font-size: inherit;
+    padding: 0.5em 20px;
+    /* margin: 0 30px; */
+    cursor: pointer;
+  }
+  
+  thead button:hover::before {
+    content: '↑ ';
+  }
+  
+  thead button.ascending::before {
+    content: '↑ ';
+    display: inline-block;
+  }
+  
+  thead button.descending::before {
+    content: '↓ ';
+    display: inline-block;
+  }
+  
+  tbody tr:hover {
+    background-color: rgb(255, 255, 255, 0.5 );
+  
+  }  
+}
