--- a/src/MyGear/MyGear.css
+++ b/src/MyGear/MyGear.css
@@ -1,88 +1,184 @@
-header {
-  margin: 0;
-}
 
-.content_container {
-  margin: auto;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  background-color: black;
-  background-image: url("../../public/gear/osrs_background.jpg");
-  background-size: 60%;
-  background-repeat: repeat-y;
-  background-position-x: center;
+  header {
+    margin: 0;
+  }
+  
+  .content_container {
+    margin: auto;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    background-image: url("../../public/gear/osrs_background.jpg");
+    background-size: 100%;
+    background-repeat: repeat-y;
+    background-position-x: center;
+    min-height: 60vw;
+    height: 100%;
+  
+  }
+  
+  .title {
+    color: white;
+    padding-bottom: 2vw;
+    text-decoration: none;
+  }
+  
+  .styles_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  
+  .combat_button {
+    height: calc(1vw + 3em);
+    width: calc(1vw + 3em);
+    margin: 0 3vw;
+  }
+  
+  .button_img {
+    height: 70%;
+    margin: auto;
+  }
+  
+  .style_text {
+    display: none;
+  }
+  
+  .gear_container {
+    background-color: grey;
+    opacity: .7;
+    border-radius: 30px;
+    margin: 50px;
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    width: 80vw;
+    height: 60vw;
+  }
+  
+  .gear_content {
+    width: 45%;
+    align-self: center;
+    margin: 2vw;
+  }
+  
+  .logo {
+    width: 100%;
+    opacity: 1;
+    align-self: center;
+    margin: auto;
+  }
+  
+  .init_content {
+    flex-direction: column;
+    display: flex;  
+  }
+  
+  .init_text {
+    color: white;
+    font-size: calc(1vw + .6em);
+    font-weight: bold;
+    height: calc(1vw + .5em);
+    line-height: calc(1vw + .5em);
+  }
+  
+  .combat_button {
+    background-color: bisque;
+    border-radius: 14px;
+    border-style: hidden;
+  }
 
-}
 
-.title {
-  color: white;
-  padding-bottom: 10px;
-  text-decoration: none;
-}
-
-.styles_container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.combat_button {
-  height: 50px;
-  width: 170px;
-  padding-left: 10px;
-  margin: 0 20px;
-  display: flex;
-  flex-direction: row;
-}
-
-.button_img {
-  padding: 4px;
-}
-
-.style_text {
-  font-size: 20px;
-  font-weight: bold;
-  margin: auto;
-  justify-content: center;
-}
-
-.gear_container {
-  background-color: grey;
-  opacity: .7;
-  border-radius: 30px;
-  margin: 50px;
-  display: flex;
-  align-self: center;
-  justify-content: center;
-  width: 48%;
-  height: 500px;
-}
-
-.gear_content {
-  width: 40%;
-  align-self: center;
-  margin: 20px;
-}
-
-.logo {
-  max-width: 100%;
-  opacity: 1;
-  align-self: center;
-}
-
-.init_content {
-  flex-direction: column;
-}
-
-.init_text {
-  color: white;
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.combat_button {
-  background-color: bisque;
-  border-radius: 14px;
-  border-style: hidden;
+@media only screen and (min-width: 768px) {
+  header {
+    margin: 0;
+  }
+  
+  .content_container {
+    margin: auto;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    background-image: url("../../public/gear/osrs_background.jpg");
+    background-size: 60%;
+    background-repeat: repeat-y;
+    background-position-x: center;
+  
+  }
+  
+  .title {
+    color: white;
+    padding-bottom: 10px;
+    text-decoration: none;
+  }
+  
+  .styles_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  
+  .combat_button {
+    height: 50px;
+    width: calc(8vw + 4em);
+    padding-left: 10px;
+    margin: 0 20px;
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .button_img {
+    padding: 4px;
+  }
+  
+  .style_text {
+    font-size: calc(1vw + 1em);
+    font-weight: bold;
+    margin: auto;
+    justify-content: center;
+    display: block;
+  }
+  
+  .gear_container {
+    background-color: grey;
+    opacity: .7;
+    border-radius: 30px;
+    margin: 50px;
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    width: 48%;
+    height: 500px;
+  }
+  
+  .gear_content {
+    width: 40%;
+    align-self: center;
+    margin: 20px;
+  }
+  
+  .logo {
+    max-width: 100%;
+    opacity: 1;
+    align-self: center;
+  }
+  
+  .init_content {
+    flex-direction: column;
+  }
+  
+  .init_text {
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+  }
+  
+  .combat_button {
+    background-color: bisque;
+    border-radius: 14px;
+    border-style: hidden;
+  }
 }
